Removed warning in value framework